# crypto-liquidation-map

./: .env.dev  .env.example  .env.prod  .gitignore  .gitmodules  AGENTS.md  README.md  build.sh  docker-compose.yml  prompt.txt  pyproject.toml  start.sh  stop.sh
.opencode/: HARNESS_CHECKLIST.md  IMPLEMENT.md  PLAN.md
dashboard/: Dockerfile  nginx.conf  package.json  svelte.config.js  vite.config.ts
dashboard/src/: app.html
data/train/: all_results.json  backtest_summary.json  btcusdt_benchmark.json  btcusdt_ensemble_results.json  btcusdt_hybrid_results.json  btcusdt_param_study.json  cnn_5y_results.json  cnn_results.json  ethusdt_results.json  ethusdt_xgboost.json  ppo_yearly_cv_results.json  solusdt_results.json  solusdt_xgboost.json  xgboost_5y.json  xgboost_5y_results.json  xgboost_results.json
docs/: _config.yml  academic_research_summary.md  backtest_report.md  benchmark.html  comparison.html  index.html  index.md  paper_database.md  ppo-strategy.html  research_quick_reference.md  robustness.html  strategies.html
docs/coins/: btc.html  eth.html  sol.html
docs/css/: style.css
live_trading/: Dockerfile  README.md  go.mod  go.sum  main.py
pages/: comparison.html  index.html  parametric-study.html
scripts/: benchmark_pipeline.py  ensemble_strategy.py  export_ppo_onnx.py  generate_features_1h.py  leverage_parametric_study.py  param_study_quick.py  run.py  run_all_strategies.py  run_backtest.py  run_multi_timeframe.py  train_hybrid_quick.py  train_ppo_yearly_cv.py  verify_signal_parity.py
tests/: __init__.py  test_liquidation_map.py
(+61 files in other folders)
